# WaterSampling

./: .gitignore  .gitmodules  Drone_dummy.ino  LICENSE  README.md  data_from_arduino.txt  github_command_list.txt  motor_driver_test.py
Flight_logs/: watersampling_2022-02-18-17-59-13.bag
ROS_publisher/: ROS_publisher.ino
sampler/: CMakeLists.txt  package.xml
sampler/cfg/: px4_config.yaml  px4_pluginlists.yaml
sampler/flight_logs/: watersampling_2022-02-17-20-51-20.bag  watersampling_2022-02-17-21-00-16.bag  watersampling_2022-02-19-15-14-11.bag  watersampling_2022-02-19-15-15-09.bag  watersampling_2022-02-19-15-21-18.bag
sampler/launch/: Aurelia_sampling_mission.launch  Aurelia_sampling_mission_without_sampler.launch  Aurelia_sweeping_mission.launch  EKF.launch  RTC.launch  arduino_com.launch  conductivity_sensor.launch  depth_sensor.launch  joy_mike_cntrl.launch  log.launch  master_launch.launch  mission_Aurelia.launch  mission_F550.launch  ms5837.launch  pump_sampler.launch  pump_sweeper.launch  px4.launch  sonar_sensor.launch  waypoint_sender.launch  waypoint_sender_sampling.launch  waypoint_sender_sampling_without_sampler.launch  waypoint_sender_sweeping.launch
sampler/missions/: dummy_sampling_points.plan  dummy_survey3.plan  f550_athletic_village.plan  f550_athletic_village_closer.plan  (+4 more)
sensor_box/: Drone_SD.ino  Drone_sensor_library.ino  keywords.txt
watersampling_msgs/: CMakeLists.txt  package.xml
watersampling_msgs/msg/: ConductivityStamped.msg  EKFInfo.msg  MS5837Stamped.msg  PumpInfo.msg  RTC_time.msg  Setpoint.msg  SonarStamped.msg
(+46 files in other folders)
